--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body>
-    <h1>Galeria de Emblemas</h1>
+    <h1>Emblemas UAE IPT</h1>
     <div class="container">
         <div class="item"><img src="emblemas/11_mandamento.jpg" alt="11 Mandamento"><div class="name">11 Mandamento</div></div>
         <div class="item"><img src="emblemas/13_mandamento.jpg" alt="13 Mandamento"><div class="name">13 Mandamento</div></div>
