--- a/index.html
+++ b/index.html
@@ -6,9 +6,21 @@
     <title>Emblemas UAE-IPT</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; background-color: #f4f4f4; }
+        .search-box {
+            margin: 20px auto;
+            width: 80%;
+            max-width: 300px;
+        }
+        input {
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
         .container { 
             display: grid; 
-            grid-template-columns: repeat(3, 1fr); /* 3 colunas */
+            grid-template-columns: repeat(3, 1fr);
             gap: 20px; 
             padding: 20px; 
             max-width: 900px;
@@ -36,6 +48,12 @@
 </head>
 <body>
     <h1>Emblemas UAE-IPT</h1>
+
+    <!-- Barra de Pesquisa -->
+    <div class="search-box">
+        <input type="text" id="search" placeholder="Pesquisar emblema..." onkeyup="filterEmblems()">
+    </div>
+
     <div class="container">
         <div class="item"><img src="emblemas/11_mandamento.jpg" alt="11 Mandamento"><div class="name">11 Mandamento</div></div>
         <div class="item"><img src="emblemas/13_mandamento.jpg" alt="13 Mandamento"><div class="name">13 Mandamento</div></div>
@@ -989,6 +1007,22 @@
         <div class="item"><img src="emblemas/vizela.jpg" alt="Vizela"><div class="name">Vizela</div></div>
         <div class="item"><img src="emblemas/you_are_so.jpg" alt="You Are So"><div class="name">You Are So</div></div>
         <div class="item"><img src="emblemas/zaire.jpg" alt="Zaire"><div class="name">Zaire</div></div>
+
+
+
     </div>
+
+    <script>
+        function filterEmblems() {
+            let input = document.getElementById("search").value.toLowerCase();
+            let items = document.querySelectorAll(".item");
+
+            items.forEach(item => {
+                let name = item.querySelector(".name").innerText.toLowerCase();
+                item.style.display = name.includes(input) ? "block" : "none";
+            });
+        }
+    </script>
 </body>
 </html>
+
